apps/production/openspeedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  ingressClassName: traefik
  rules:
    - host: speedtest.natetech.org
      http:
        paths:
          - backend:
              service:
                name: openspeedtest
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - speedtest.natetech.org
    secretName: openspeedtest-certificate-secret
